<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    style="@style/background">

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <include layout="@layout/company_common_new"></include>

        <View
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            style="@style/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_about_us"/>

        <TextView
            style="@style/homeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/company_description_textview"/>

        <View
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            style="@style/textGreen"
            android:text="@string/phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/homeText"
            android:id="@+id/company_phone_textview"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            style="@style/textGreen"
            android:text="@string/fax"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/homeText"
            android:id="@+id/company_fax_textview"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            style="@style/textGreen"
            android:text="@string/toll"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/homeText"
            android:id="@+id/company_toll_textview"/>

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:background="@android:color/darker_gray"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textGreen"
            android:text="@string/corporate_website"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/homeText"
            android:id="@+id/company_website_textview"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/tab_background_selected"/>

        <TextView
            style="@style/heading"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_division"/>

        <LinearLayout
            android:orientation="horizontal" android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent" android:layout_height="wrap_content">

                <TextView
                    style="@style/heading"
                    android:text="Heading"
                    android:paddingBottom="5dp"
                    android:paddingRight="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/company_division_name"
                    />
                <TextView
                    android:paddingBottom="5dp"
                    android:paddingRight="5dp"
                    android:text="Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/company_division_address"/>


            </LinearLayout>

            <ImageButton
                android:background="@color/imageBackground"
                android:src="@drawable/contact_map_marker_white"
                android:id="@+id/company_division_map"
                android:layout_width="80dp"
                android:layout_height="80dp" />



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            style="@style/textGreen"
            android:text="@string/phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/homeText"
            android:id="@+id/company_division_phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            style="@style/textGreen"
            android:text="@string/fax"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/homeText"
            android:id="@+id/company_division_fax"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            style="@style/textGreen"
            android:text="@string/toll"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/homeText"
            android:id="@+id/company_division_toll"/>


    </LinearLayout>


</ScrollView>